--- a/Haunted-House-New-master/attic.html
+++ b/Haunted-House-New-master/attic.html
@@ -14,11 +14,10 @@
         </div>    
         <div class="textContainer">
             <p>Attic</p>
-        </div> 
+        </div>
         <div class="buttonContainer">
-            <button>Button 1</button>
-            <button>Button 2</button>
-        </div>           
+            <button onclick = "window.location.href='masterBedroom.html'".html>Go back to Master Bedroom</button>            <button>Button 2</button>
+        </div>          
     </div>
 </body>
 </html>
