--- a/Haunted-House-New-master/guestBedroom.html
+++ b/Haunted-House-New-master/guestBedroom.html
@@ -14,11 +14,11 @@
         </div>    
         <div class="textContainer">
             <p>Guest Bedroom</p>
-        </div> 
+        </div>
         <div class="buttonContainer">
-            <button>Button 1</button>
+            <button onclick = "window.location.href='staircase.html'".html>Go back to Staircase</button>
             <button>Button 2</button>
-        </div>           
+        </div>          
     </div>
 </body>
 </html>
