--- a/Haunted-House-New-master/livingRoom.html
+++ b/Haunted-House-New-master/livingRoom.html
@@ -14,11 +14,13 @@
         </div>    
         <div class="textContainer">
             <p>Living room</p>
-        </div> 
+        </div>
         <div class="buttonContainer">
-            <button>Button 1</button>
-            <button>Button 2</button>
-        </div>           
+            <button onclick = "window.location.href='firstBathroom.html'".html>Go to Bathroom</button>
+            <button onclick = "window.location.href='kitchen.html'".html>Go to Kitchen</button>
+            <button onclick = "window.location.href='kidBedroom.html'".html>Go to Kid's Bedroom</button>
+            <button onclick = "window.location.href='staircase.html'".html>Go back to Staircase</button>
+        </div>          
     </div>
 </body>
 </html>
