finished home page

--- a/index.html
+++ b/index.html
@@ -4,9 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Haunted House</title>
     <script src="script.js" async></script>
     <link rel="stylesheet" href="style.css">
+    <title>Haunted House</title>
+    <style>
+        body {
+             background-image: url('images/hauntedhouse1.png');
+        }
+    </style>
 </head>
 <body>
     <div class="container">
@@ -14,7 +19,7 @@
             <div id="welcome">Welcome To The Haunted House</div>
             <div id="start"><button id="startButton" onclick = startGame()>Start Game</button></div>
             <div id="help"><button id="helpButton" onclick = openPopUp()>Help</button></div>
-            <div id="name"> Developed by Aleksei and Arhan</div>
+            <div id="name"> Developed by Aleksei & Arhan</div>
         </div>
     </div>
 </body>
