--- a/livingRoom.html
+++ b/livingRoom.html
@@ -6,12 +6,15 @@
     <script src="script.js" async></script>
     <link rel="stylesheet" href="style.css">
     <title>Document</title>
+    <style>
+        body {
+          background-image: url('images/livingroom.png');
+        }
+    </style>
 </head>
 <body>
     <div class = "mainContainer">
-        <div class = "imageContainer">
-            <img src="images/livingroom.png" alt="Living Room">
-        </div>    
+        <div></div>    
         <div class="textContainer">
             <p>Living room</p>
         </div>
