finished help page

--- a/help.html
+++ b/help.html
@@ -3,9 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Help</title>
 </head>
-<body>
-   
+<body style="background-color: black; color: red;">
+   <p>
+    Welcome to the Haunted House... <br> You've been trapped in a haunted house and you have to find a way to escape.
+    <br> Navigate your way through the haunted house and find secrets in order to escape.
+   </p>
 </body>
 </html>
