finished living room

--- a/kidBedroom.html
+++ b/kidBedroom.html
@@ -10,7 +10,7 @@
 <body>
     <div class = "mainContainer">
         <div class = "imageContainer">
-            <img src="images/kid's room.png" alt="Kid's Room">
+            <img src="images/kid'sbedroom.jpg" alt="Kid's Room">
         </div>    
         <div class="textContainer">
             <p>Kid's Room</p>
