--- a/livingRoom.html
+++ b/livingRoom.html
@@ -14,15 +14,15 @@
 </head>
 <body>
     <div class = "mainContainer">
-        <div></div>    
+        <div class="backButton"><button onclick = "window.location.href='index.html'">Home (Will Reset Progress)</button></div>    
         <div class="textContainer">
-            <p>Living room</p>
+            <p>Upon entering the haunted house, you find yourself in a living room. There are three doors and a staircase. Where do you want to go?</p>
         </div>
         <div class="buttonContainer">
-            <button onclick = "window.location.href='firstBathroom.html'".html>Go to Bathroom</button>
-            <button onclick = "window.location.href='kitchen.html'".html>Go to Kitchen</button>
-            <button onclick = "window.location.href='kidBedroom.html'".html>Go to Kid's Bedroom</button>
-            <button onclick = "window.location.href='staircase.html'".html>Go back to Staircase</button>
+            <button onclick = "window.location.href='firstBathroom.html'".html>Go to the Bathroom</button>
+            <button onclick = "window.location.href='kitchen.html'".html>Go to the Kitchen</button>
+            <button onclick = "window.location.href='kidBedroom.html'".html>Go to the Kid's Bedroom</button>
+            <button onclick = "window.location.href='staircase.html'".html>Go up the Staircase</button>
         </div>          
     </div>
 </body>
