--- a/attic.html
+++ b/attic.html
@@ -5,18 +5,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="script.js" async></script>
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>Attic</title>
+    <style>
+        body {
+          background-image: url('images/attic.jpg');
+        }
+    </style>
 </head>
 <body>
-    <div class = "mainContainer">
-        <div class = "imageContainer">
-            <img src="images/attic.png" alt="Attic">
-        </div>    
+    <div class = "mainContainer">  
+        <div class="backButton"><button onclick = "window.location.href='index.html'">Home (Will Reset Progress)</button></div>
         <div class="textContainer">
-            <p>Attic</p>
+            <p>You enter a small and damp attic. There seems to be a desk with nothing useful on it, a chair, and a box under the desk.</p>
         </div>
         <div class="buttonContainer">
-            <button onclick = "window.location.href='masterBedroom.html'".html>Go back to Master Bedroom</button>            <button>Button 2</button>
+            <button onclick = "window.location.href='masterBedroom.html'".html>Go back to the Master Bedroom</button>           
+            <button>Open the box</button>
         </div>          
     </div>
 </body>
