--- a/kidBedroom.html
+++ b/kidBedroom.html
@@ -5,19 +5,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="script.js" async></script>
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>Kid's Bedroom</title>
+    <style>
+        body {
+          background-image: url('images/kidbedroom.jpg');
+        }
+    </style>
 </head>
 <body>
     <div class = "mainContainer">
-        <div class = "imageContainer">
-            <img src="images/kid'sbedroom.jpg" alt="Kid's Room">
-        </div>    
+        <div class="backButton"><button onclick = "window.location.href='index.html'">Home (Will Reset Progress)</button></div>
         <div class="textContainer">
-            <p>Kid's Room</p>
+            <p>You enter a dark and dusty bedroom. A small bed and a toy chest catch your eye.</p>
         </div>
         <div class="buttonContainer">
-            <button onclick = "window.location.href='livingroom.html'".html>Go back to Living Room</button>
-            <button>Button 2</button>
+            <button onclick = "window.location.href='livingroom.html'".html>Go back to the Living Room</button>
+            <button>Look under the bed</button>
+            <button>Open the toy chest</button>
         </div>          
     </div>
 </body>
