--- a/masterBedroom.html
+++ b/masterBedroom.html
@@ -5,19 +5,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="script.js" async></script>
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>Master Bedroom</title>
+    <style>
+        body {
+          background-image: url('images/masterbedroom.jpg');
+        }
+    </style>
 </head>
 <body>
     <div class = "mainContainer">
-        <div class = "imageContainer">
-            <img src="images/masterbedroom.png" alt="Master Bedroom">
-        </div>    
+        <div class="backButton"><button onclick = "window.location.href='index.html'">Home (Will Reset Progress)</button></div>
         <div class="textContainer">
-            <p>Master Bedroom</p>
+            <p>You enter the master bedroom, that is noticeably cleaner than some of the other rooms. You see a hatch door on the ceiling.</p>
         </div>
         <div class="buttonContainer">
-            <button onclick = "window.location.href='staircase.html'".html>Go back to Staircase</button>
-            <button onclick = "window.location.href='attic.html'".html>Go to attic</button>
+            <button onclick = "window.location.href='staircase.html'".html>Go back to the staircase landing</button>
+            <button onclick = "window.location.href='attic.html'".html>Go to the Attic</button>
         </div>          
     </div>
 </body>
