--- a/secondBathroom.html
+++ b/secondBathroom.html
@@ -5,19 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="script.js" async></script>
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>Bathroom</title>
+    <style>
+        body {
+          background-image: url('images/bathroom2.jpg');
+        }
+    </style>
 </head>
 <body>
     <div class = "mainContainer">
-        <div class = "imageContainer">
-            <img src="images/bathroom2.png" alt="Second Bathroom">
-        </div>    
+        <div class="backButton"><button onclick = "window.location.href='index.html'">Home (Will Reset Progress)</button></div> 
         <div class="textContainer">
-            <p>Second Bathroom</p>
+            <p>You enter a small and dark bathroom. There is a door on the other side, but it's just a small, empty closet. There's nothing else.</p>
         </div>
         <div class="buttonContainer">
-            <button onclick = "window.location.href='staircase.html'".html>Go back to Staircase</button>
-            <button>Button 2</button>
+            <button onclick = "window.location.href='staircase.html'".html>Go back to the staircase landing</button>
         </div>          
     </div>
 </body>
