--- a/staircase.html
+++ b/staircase.html
@@ -3,14 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <script src="script.js" async></script>
+    <link rel="stylesheet" href="style.css">
+    <title>Staircase</title>
+    <style>
+        body {
+          background-image: url('images/staircase.webp');
+        }
+    </style>
 </head>
+
 <body>
+    <div class = "mainContainer">
+        <div class="backButton"><button onclick = "window.location.href='index.html'">Home (Will Reset Progress)</button></div>
+        <div class="textContainer">
+            <p>You go up the staircase. You see three more doors. Where do you want to go?</p>
+        </div>
     <div class="buttonContainer">
-        <button onclick = "window.location.href='livingroom.html'".html>Go back to Living Room</button>
-        <button onclick = "window.location.href='masterBedroom.html'".html>Go to Master Bedroom</button>
-        <button onclick = "window.location.href='guestBedroom.html'".html>Go to Guest Bedroom</button>
-        <button onclick = "window.location.href='secondBathroom.html'".html>Go to Second Bathroom</button>
+        <button onclick = "window.location.href='livingroom.html'".html>Go back downstairs</button>
+        <button onclick = "window.location.href='masterBedroom.html'".html>Go to the Master Bedroom</button>
+        <button onclick = "window.location.href='guestBedroom.html'".html>Go to the Guest Bedroom</button>
+        <button onclick = "window.location.href='secondBathroom.html'".html>Go to the Bathroom</button>
     </div>          
    
 </body>
