--- a/livingRoom.html
+++ b/livingRoom.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="script.js" async></script>
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>Living Room</title>
     <style>
         body {
           background-image: url('images/livingroom.png');
