--- a/kitchen.html
+++ b/kitchen.html
@@ -16,13 +16,13 @@
     <div class = "mainContainer">   
         <div class="backButton"><button onclick = "window.location.href='index.html'">Home (Will Reset Progress)</button></div>
         <div class="textContainer">
-            <p>You enter a small and dark kitchen. Although it seems quite empty, there are some closed cabinets.</p>
+            <p id="kitchenText">You enter a small and dark kitchen. Although it seems quite empty, there are some closed cabinets.</p>
         </div>
         <div class="buttonContainer">
             <button onclick = "window.location.href='livingroom.html'".html>Go back to the Living Room</button>
-            <button>Open the first cabinet</button>
-            <button>Open the second cabinet</button>
-            <button>Open the third cabinet</button>
+            <button id="misc3">Open the first cabinet</button>
+            <button id="misc4">Open the second cabinet</button>
+            <button id="kitchenImportant">Open the third cabinet</button>
         </div>          
     </div>
 </body>
