--- a/kidBedroom.html
+++ b/kidBedroom.html
@@ -16,12 +16,12 @@
     <div class = "mainContainer">
         <div class="backButton"><button onclick = "window.location.href='index.html'">Home (Will Reset Progress)</button></div>
         <div class="textContainer">
-            <p>You enter a dark and dusty bedroom. A small bed and a toy chest catch your eye.</p>
+            <p id="kidText">You enter a dark and dusty bedroom. A small bed and a toy chest catch your eye.</p>
         </div>
         <div class="buttonContainer">
             <button onclick = "window.location.href='livingroom.html'".html>Go back to the Living Room</button>
-            <button>Look under the bed</button>
-            <button>Open the toy chest</button>
+            <button id="kidBed">Look under the bed</button>
+            <button id="kidToy">Open the toy chest</button>
         </div>          
     </div>
 </body>
