did victory page

--- a/attic.html
+++ b/attic.html
@@ -16,11 +16,11 @@
     <div class = "mainContainer">  
         <div class="backButton"><button onclick = "window.location.href='index.html'">Home (Will Reset Progress)</button></div>
         <div class="textContainer">
-            <p>You enter a small and damp attic. There seems to be a desk with nothing useful on it, a chair, and a box under the desk.</p>
+            <p id="atticText">You enter a small and damp attic. There seems to be a desk with nothing useful on it, a chair, and a box under the desk.</p>
         </div>
         <div class="buttonContainer">
             <button onclick = "window.location.href='masterBedroom.html'".html>Go back to the Master Bedroom</button>           
-            <button>Open the box</button>
+            <button id="atticImportant">Open the box</button>
         </div>          
     </div>
 </body>
