finished victory page

--- a/victory.html
+++ b/victory.html
@@ -40,10 +40,7 @@
     </style>
 </head>
 <body>
-
     <div class="win-message">You Escaped!</div>
-    
-    <button class="win-button" onclick="window.location.href='index.html'">Restart</button>
-
+    <button class="win-button" onclick="window.location.href='index.html', location.reload">Restart</button>
 </body>
 </html>
