fixed page connections

--- a/kidBedroom.html
+++ b/kidBedroom.html
@@ -19,7 +19,7 @@
             <p id="kidText">You enter a dark and dusty bedroom. A small bed and a toy chest catch your eye.</p>
         </div>
         <div class="buttonContainer">
-            <button onclick = "window.location.href='livingroom.html'".html>Go back to the Living Room</button>
+            <button onclick = "window.location.href='livingRoom.html'".html>Go back to the Living Room</button>
             <button id="kidBed">Look under the bed</button>
             <button id="kidToy">Open the toy chest</button>
         </div>          
