--- a/kitchen.html
+++ b/kitchen.html
@@ -19,7 +19,7 @@
             <p id="kitchenText">You enter a small and dark kitchen. Although it seems quite empty, there are some closed cabinets.</p>
         </div>
         <div class="buttonContainer">
-            <button onclick = "window.location.href='livingroom.html'".html>Go back to the Living Room</button>
+            <button onclick = "window.location.href='livingRoom.html'".html>Go back to the Living Room</button>
             <button id="misc3">Open the first cabinet</button>
             <button id="misc4">Open the second cabinet</button>
             <button id="kitchenImportant">Open the third cabinet</button>
