--- a/staircase.html
+++ b/staircase.html
@@ -20,7 +20,7 @@
             <p>You go up the staircase. You see three more doors. Where do you want to go?</p>
         </div>
     <div class="buttonContainer">
-        <button onclick = "window.location.href='livingroom.html'".html>Go back downstairs</button>
+        <button onclick = "window.location.href='livingRoom.html'".html>Go back downstairs</button>
         <button onclick = "window.location.href='masterBedroom.html'".html>Go to the Master Bedroom</button>
         <button onclick = "window.location.href='guestBedroom.html'".html>Go to the Guest Bedroom</button>
         <button onclick = "window.location.href='secondBathroom.html'".html>Go to the Bathroom</button>
