fixed location moving

--- a/locations/firstBathroom.html
+++ b/locations/firstBathroom.html
@@ -19,7 +19,7 @@
             <p id="bathroomText">You enter a bathroom, with walls that look old and cracked. There's a bathtub, a sink, a toilet, and a cabinet under the sink.</p>
         </div>
         <div class="buttonContainer">
-            <button onclick = "window.location.href='livingRoom.html'".html>Go back to the Living Room</button>
+            <button onclick = "window.location.href='locations/livingRoom.html'".html>Go back to the Living Room</button>
             <button id="misc1">Look In The Bathtub</button>
             <button id="misc2">Look In The Toilet</button>
             <button id="bathroomImportant">Open The Cabinet</button>
